Add new TestType enum values and update tests dropdown UI (#310)
* Initial plan

* Add new TestType enum values to backend, frontend, and API docs


* Address PR review comments: rename CoreEndInterview, fix api.yaml, show legacy types when editing old tests


* Fix MUI Select bugs: use arrays instead of fragments for conditional MenuItems


* Simplify dropdown: always show only new test types, remove legacy conditional logic


---------
