# server/api.yaml
@@ -1652,12 +1652,19 @@ components:
           type: string
           enum:
             - presentation
-            - javaScript
+            - javascript
             - browsers-interview
             - using-apis-interview
             - nodejs
             - react-interview
             - final-project-interview
+            - core-mid-term-interview
+            - core-end-interview
+            - frontend-mid-term-interview
+            - backend-mid-term-interview
+            - cloud-mid-term-interview
+            - data-mid-term-interview
+            - tester-mid-term-interview
         score:
           type: number
           example: 8.6
