# server/src/models/Trainee.ts
@@ -84,6 +84,13 @@ export enum TestType {
   NodeJS = 'nodejs',
   ReactInterview = 'react-interview',
   FinalProjectInterview = 'final-project-interview',
+  CoreMidTermInterview = 'core-mid-term-interview',
+  CoreEndInterview = 'core-end-interview',
+  FrontEndMidTermInterview = 'frontend-mid-term-interview',
+  BackEndMidTermInterview = 'backend-mid-term-interview',
+  CloudMidTermInterview = 'cloud-mid-term-interview',
+  DataMidTermInterview = 'data-mid-term-interview',
+  TesterMidTermInterview = 'tester-mid-term-interview',
 }
 
 export interface Trainee {
